--- a/src/app/tab2/actions/gestione-presenze-individuale-input/gestione-presenze-individuale-input.page.html
+++ b/src/app/tab2/actions/gestione-presenze-individuale-input/gestione-presenze-individuale-input.page.html
@@ -33,8 +33,13 @@
         </ion-row>
         <ion-row class="v-center">
             <span class="attributes-2">Ore inserite:</span>
-            <span (click)="showPicker(giorno)" [style.color]="textColor(giorno)" class="attributes-ore"
+            <span (click)="showPickerOre(giorno)" [style.color]="textColor(giorno)" class="attributes-ore"
                 padding>{{ viewOre(giorno) }}</span>
+        </ion-row>
+        <ion-row class="v-center">
+            <span class="attributes-2">Modalità:</span>
+            <span (click)="showPickerModalita(giorno)" [style.color]="textColor(giorno)" class="attributes-ore"
+                padding>{{ viewModalita(giorno) }}</span>
         </ion-row>
         <br>
         <ion-row>
