--- a/src/app/tab3/actions/esperienza-dettaglio/esperienza-dettaglio.component.html
+++ b/src/app/tab3/actions/esperienza-dettaglio/esperienza-dettaglio.component.html
@@ -45,16 +45,35 @@
             <ion-col><span class="attributes text-semibold"><br>Tutor scolastico:&nbsp;</span><span class="attributes-value ion-text-capitalize">{{aa.referenteScuola}}</span>
             </ion-col>
         </ion-row>
-        <ion-row *ngIf="aa.referenteEsterno">
-            <ion-col><span class="attributes text-semibold"><br>Tutor aziendale:&nbsp;</span><span class="attributes-value ion-text-capitalize">{{aa.referenteEsterno}}</span>
-            </ion-col>
-        </ion-row>
         <ion-row *ngIf="aa.nomeEnte">
             <ion-col>
                 <span class="attributes text-semibold"><br>Presso:&nbsp;</span>
                 <span class="attributes-value ion-text-capitalize">{{aa.nomeEnte}}</span>
             </ion-col>
         </ion-row>
+        <ion-row *ngIf="aa.luogoSvolgimento">
+            <ion-col>
+                <span class="attributes text-semibold"><br>Indirizzo:&nbsp;</span>
+                <span class="attributes-value ion-text-capitalize">{{aa.luogoSvolgimento}}</span>
+            </ion-col>
+        </ion-row>
+        <ion-row *ngIf="aa.referenteEsterno">
+            <ion-col><span class="attributes text-semibold"><br>Tutor aziendale:&nbsp;</span><span class="attributes-value ion-text-capitalize">{{aa.referenteEsterno}}</span>
+            </ion-col>
+        </ion-row>        
+        <ion-row *ngIf="aa.referenteEsternoTelefono">
+            <ion-col><span class="attributes text-semibold"><br>Telefono tutor aziendale:&nbsp;</span><span class="attributes-value ion-text-capitalize">{{aa.referenteEsternoTelefono}}</span>
+            </ion-col>
+        </ion-row>
+        <ion-row *ngIf="aa.referenteScuola">
+            <ion-col><span class="attributes text-semibold"><br>Tutor scolastico:&nbsp;</span><span class="attributes-value ion-text-capitalize">{{aa.referenteScuola}}</span>
+            </ion-col>
+        </ion-row>
+        <ion-row *ngIf="aa.referenteScuolaTelefono">
+            <ion-col><span class="attributes text-semibold"><br>Telefono tutor scolastico:&nbsp;</span><span class="attributes-value ion-text-capitalize">{{aa.referenteScuolaTelefono}}</span>
+            </ion-col>
+        </ion-row>
+ 
         <br>
         <ion-row *ngIf="hasCoordinate()">
             <ion-col>
