--- a/src/app/tab2/actions/gestione-presenze-individuale-input/gestione-presenze-individuale-input.page.html
+++ b/src/app/tab2/actions/gestione-presenze-individuale-input/gestione-presenze-individuale-input.page.html
@@ -36,7 +36,7 @@
             <span (click)="showPickerOre(giorno)" [style.color]="textColor(giorno)" class="attributes-ore"
                 padding>{{ viewOre(giorno) }}</span>
         </ion-row>
-        <ion-row class="v-center">
+        <ion-row *ngIf="utilsService.isModalitaVisible(giorno)" class="v-center">
             <span class="attributes-2">Modalità:</span>
             <span (click)="showPickerModalita(giorno)" [style.color]="textColor(giorno)" class="attributes-ore"
                 padding>{{ viewModalita(giorno) }}</span>
