--- a/src/app/tab3/actions/documento-upload-modal/document-upload-modal.component.html
+++ b/src/app/tab3/actions/documento-upload-modal/document-upload-modal.component.html
@@ -55,23 +55,16 @@
                         </span>
                     </ion-col>
                 </ion-row>
-                <!-- <ion-row>
-                    <ion-col>
-                        <span class="attributes">
-                            <span class="text-semibold">Data caricamento:&nbsp;&nbsp;&nbsp;</span>
-                            <span>{{saveFileObj.file.dataUpload | date: 'dd/MM/yy' }}
-                            </span>
-                        </span>
-                    </ion-col>
-                </ion-row> -->
             </ion-grid>
         </div>
         <br />
         <br />
         <div class="row text-center">
-            <ion-button expand="outline" (click)="carica()" class="button-salva text-bold ion-text-capitalize" size="small">Salva</ion-button>
+            <ion-button expand="outline" (click)="carica()" class="button-salva text-bold ion-text-capitalize"
+                size="small">Salva</ion-button>
             &nbsp;&nbsp;
-            <ion-button expand="outline" (click)="dismiss()" class="button-annulla text-bold ion-text-capitalize" size="small">Annulla</ion-button>
+            <ion-button expand="outline" (click)="dismiss()" class="button-annulla text-bold ion-text-capitalize"
+                size="small">Annulla</ion-button>
         </div>
     </div>
 </ion-content>
