--- a/src/app/tab3/actions/esperienza-dettaglio/esperienza-dettaglio.component.html
+++ b/src/app/tab3/actions/esperienza-dettaglio/esperienza-dettaglio.component.html
@@ -89,7 +89,8 @@
             <ion-grid>
                 <ion-row>
                     <ion-col class="float-right">
-                        <ion-icon *ngIf="isRemovable(documento)" name="trash" class="icon-delete float-right attributes-value"
+                        <ion-icon *ngIf="isRemovable(documento)" name="trash"
+                            class="icon-delete float-right attributes-value"
                             (click)="showDeleteConfirmationAlert(documento)"></ion-icon>
                     </ion-col>
                 </ion-row>
