--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -9,7 +9,7 @@
     </div>
     <br>
     <div padding>
-      <label class="text">EDIT - Studente è l’app ufficiale della Provincia Autonoma di Trento per la gestione delle esperienze di alternanza scuola-lavoro</label>
+      <label class="text">EDIT - Studente è l’app ufficiale della Provincia Autonoma di Trento per Accompagnarti nel tuo percorso di Alternanza Scuola-Lavoro</label>
     </div>
     <br>
     <br>
