--- a/src/app/landing/landing.page.scss
+++ b/src/app/landing/landing.page.scss
@@ -26,6 +26,12 @@ ion-content {
             font-size: large;
             text-decoration: underline;
         }
+        .error-font {
+            // font: normal 20px/42px Titillium Web;
+            letter-spacing: 0;
+            color: #D1344C;
+            opacity: 1;
+        }
     
     }
     
