Fix for asl2-373

--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -2,7 +2,7 @@
   <ion-grid class="container">
     <br>
     <div padding>
-      <h1 class="heading-1 text-bold">Benvenuto in EDIT</h1>
+      <h1 class="heading-1 text-bold">Scopri EDIT</h1>
     </div>
     <div padding>
       <!-- <div id="match">Title</div> aria-labelledby="match" -->
@@ -10,7 +10,7 @@
     </div>
     <br>
     <div padding>
-      <label class="text">EDIT - Studente è l’app ufficiale della Provincia Autonoma di Trento per Accompagnarti nel tuo percorso di Alternanza Scuola-Lavoro</label>
+      <label class="text">EDIT - Studente è l’app ufficiale della Provincia Autonoma di Trento per accompagnarti nel tuo percorso di Alternanza Scuola-Lavoro</label>
     </div>
     <br>
     <br>
