--- a/src/app/tab1/actions/credits/credits.page.html
+++ b/src/app/tab1/actions/credits/credits.page.html
@@ -10,12 +10,12 @@
       <ion-col size="4"></ion-col>  
       <ion-col size="2">
           <a target="_blank" href="http://www.provincia.tn.it/">
-            <img src="./assets/image/provinciaTN.png" class="footer-imgTN">
+            <img role="none" src="./assets/image/provinciaTN.png" class="footer-imgTN">
           </a>&nbsp;&nbsp;
         </ion-col>
         <ion-col size="2">
           <a target="_blank" href="http://www.fbk.eu/">
-            <img src="./assets/image/fbk.png" class="footer-imgFBK">
+            <img role="none" src="./assets/image/fbk.png" class="footer-imgFBK">
           </a>
         </ion-col>
         <ion-col size="4"></ion-col>
