Fix for asl2-374

--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,24 +1,13 @@
 
 .container {
     color: #5C6F82;
-    .titolo {
-       font-size: 24px;
-    }
-    .istituto {
-        font-size: 14px;
-    }
     .icon {
         font-size: 128px;
         color: #E9E9E9;
     }
-    .link {
-        color: #0073E6;
-        font-size: 18px;
-        text-decoration: underline;
-    }
     .button-logout {
         background-color: #CCE6FF;
-        color: #0073E6;
+        color: #1E4C96;
         font-size:17px;
     }
     .icon-edit {
@@ -26,7 +15,7 @@
         height: 24px;
     }
     .blue {
-        color: #0073E6;
+        color: #0066CC;
     }
 }
 
