Fix for asl2-374

--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -6,7 +6,7 @@
     </div>
     <div padding>
       <!-- <div id="match">Title</div> aria-labelledby="match" -->
-      <ion-icon role="none" title="title" class="icon" src="./assets/icon/landing-icon.svg" ></ion-icon>
+      <ion-icon role="none" title="titolo" class="icon" src="./assets/icon/landing-icon.svg" ></ion-icon>
     </div>
     <br>
     <div padding>
