--- a/src/app/tab1/actions/credits/credits.page.html
+++ b/src/app/tab1/actions/credits/credits.page.html
@@ -1,29 +1,32 @@
-
-  <ion-header>
-    <ion-row class="header-titolo v-center text-semibold">
-        <ion-back-button defaultHref="home"></ion-back-button>Credits
-    </ion-row>
+<ion-header>
+  <h1 class="header-titolo v-center text-semibold">
+    <ion-back-button defaultHref="home"></ion-back-button>Credits
+  </h1>
 </ion-header>
-  <ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true">
   <br>
-    <ion-row>
-      <ion-col size="4"></ion-col>  
-      <ion-col size="2">
-          <a target="_blank" href="http://www.provincia.tn.it/">
-            <img role="none" src="./assets/image/provinciaTN.png" class="footer-imgTN">
-          </a>&nbsp;&nbsp;
-        </ion-col>
-        <ion-col size="2">
-          <a target="_blank" href="http://www.fbk.eu/">
-            <img role="none" src="./assets/image/fbk.png" class="footer-imgFBK">
-          </a>
-        </ion-col>
-        <ion-col size="4"></ion-col>
-      </ion-row>
-    <br>
-    <p class="text-center p1">Copyright Smart Communities 2020 Fondazione Bruno Kessler e Provincia Autonoma di Trento</p>
-    <br>
-    <p class="text-center p1 text-semibold">Questa applicazione è stata progettata tramite un percorso di co-design con studenti dei seguenti istituti:</p>
-    <br>
-    <p class="text-center p1">I.T.T. Guglielmo Marconi <span class="text-italic">(Rovereto)</span><br>I.T.E.T. Felice e Gregorio Fontana <span class="text-italic">(Rovereto)</span><br>Collegio Arcivescovile Celestino Endrici <span class="text-italic">(Trento)</span><br>Istituto Martino Martini<br><span class="text-italic">(Mezzolombardo)</span></p>
-  </ion-content>
+  <ion-row>
+    <ion-col size="4"></ion-col>
+    <ion-col size="2">
+      <a target="_blank" href="http://www.provincia.tn.it/">
+        <img role="none" src="./assets/image/provinciaTN.png" class="footer-imgTN">
+      </a>&nbsp;&nbsp;
+    </ion-col>
+    <ion-col size="2">
+      <a target="_blank" href="http://www.fbk.eu/">
+        <img role="none" src="./assets/image/fbk.png" class="footer-imgFBK">
+      </a>
+    </ion-col>
+    <ion-col size="4"></ion-col>
+  </ion-row>
+  <br>
+  <p class="text-center p1">Copyright Smart Communities 2020 Fondazione Bruno Kessler e Provincia Autonoma di Trento</p>
+  <br>
+  <p class="text-center p1 text-semibold">Questa applicazione è stata progettata tramite un percorso di co-design con
+    studenti dei seguenti istituti:</p>
+  <br>
+  <p class="text-center p1">I.T.T. Guglielmo Marconi <span class="text-italic">(Rovereto)</span><br>I.T.E.T. Felice e
+    Gregorio Fontana <span class="text-italic">(Rovereto)</span><br>Collegio Arcivescovile Celestino Endrici <span
+      class="text-italic">(Trento)</span><br>Istituto Martino Martini<br><span
+      class="text-italic">(Mezzolombardo)</span></p>
+</ion-content>
