--- a/src/app/tab1/actions/credits/credits.page.scss
+++ b/src/app/tab1/actions/credits/credits.page.scss
@@ -1,6 +1,7 @@
 .header-titolo {
-    color: #0066CC;
+    color: #1E4C96;
     font-size: 20px;
+    margin: 0!important;
 }
 .footer-imgTN{
     max-width: 30px !important;
