--- a/src/global.scss
+++ b/src/global.scss
@@ -197,4 +197,36 @@ img.icon {
      .secondary {
         color:#eb445a;
     }
+    .camelcase {
+      text-transform: none;
+    }
 }
+
+.font-13 {
+  font-size: 13px!important;
+}
+.font-14 {
+  font-size: 14px!important;
+}
+.font-24 {
+  font-size: 24px!important;
+}
+.noUnderLine {
+  text-decoration: none!important;
+}
+// .alert-radio-group::-webkit-scrollbar,
+// .alert-checkbox-group::-webkit-scrollbar {
+// width: 1em;
+// display: block !important;
+// }
+
+// .alert-radio-group::-webkit-scrollbar-track,
+// .alert-checkbox-group::-webkit-scrollbar-track {
+// -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+// }
+
+// .alert-radio-group::-webkit-scrollbar-thumb,
+// .alert-checkbox-group::-webkit-scrollbar-thumb {
+// background-color: darkgrey;
+// outline: 1px solid slategrey;
+// }
