Fix for asl2-374
ion-header background removal + color contrast

--- a/src/global.scss
+++ b/src/global.scss
@@ -214,6 +214,9 @@ img.icon {
 .noUnderLine {
   text-decoration: none!important;
 }
+.header-md:after {
+  background-image: none;
+}
 // .alert-radio-group::-webkit-scrollbar,
 // .alert-checkbox-group::-webkit-scrollbar {
 // width: 1em;
