Fix for asl2-374

--- a/src/app/tab1/actions/credits/credits.page.html
+++ b/src/app/tab1/actions/credits/credits.page.html
@@ -1,9 +1,9 @@
 <ion-header>
-  <h1 class="header-titolo v-center text-semibold">
+  <h1 class="v-center header-titolo text-semibold">
     <ion-back-button defaultHref="home"></ion-back-button>Credits
   </h1>
 </ion-header>
-<ion-content [fullscreen]="true">
+<ion-content>
   <br>
   <ion-row>
     <ion-col size="4"></ion-col>
