--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,21 +1,22 @@
 <ion-tabs>
-
+  <div role="navigation">
   <ion-tab-bar *ngIf="env.showTabs" slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon src="./assets/icon/it-user.svg"></ion-icon>
+      <ion-icon title="titolo" src="./assets/icon/it-user.svg"></ion-icon>
       <ion-label class="icon-label">Profilo</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon src="./assets/icon/it-calendar.svg"></ion-icon>
+      <ion-icon title="titolo" src="./assets/icon/it-calendar.svg"></ion-icon>
       <ion-label class="icon-label">Presenze</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon src="./assets/icon/it-folder.svg"></ion-icon>
+      <ion-icon title="titolo" src="./assets/icon/it-folder.svg"></ion-icon>
       <ion-label class="icon-label">Attività</ion-label>
     </ion-tab-button>
 
   </ion-tab-bar>
-
+  </div>
+  
 </ion-tabs>
