--- a/src/global.scss
+++ b/src/global.scss
@@ -194,13 +194,34 @@ img.icon {
  }
 
  .my-custom-class .alert-wrapper {
-     .secondary {
+    .secondary {
         color:#eb445a;
     }
     .camelcase {
       text-transform: none;
     }
+    .alert-head {
+      text-align: center;
+      font-weight: 600;
+      .alert-title {
+        color: #0066CC!important;
+      }
+    }    
 }
+
+// .alert-radio-group::-webkit-scrollbar, .alert-checkbox-group::-webkit-scrollbar {
+//   width: 1em;
+//   display: block !important;
+// }
+
+// .alert-radio-group::-webkit-scrollbar-track, .alert-checkbox-group::-webkit-scrollbar-track {
+//   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+// }
+
+// .alert-radio-group::-webkit-scrollbar-thumb, .alert-checkbox-group::-webkit-scrollbar-thumb {
+//   background-color: darkgrey;
+//   outline: 1px solid slategrey;
+// }
 
 .font-13 {
   font-size: 13px!important;
@@ -217,19 +238,3 @@ img.icon {
 .header-md:after {
   background-image: none;
 }
-// .alert-radio-group::-webkit-scrollbar,
-// .alert-checkbox-group::-webkit-scrollbar {
-// width: 1em;
-// display: block !important;
-// }
-
-// .alert-radio-group::-webkit-scrollbar-track,
-// .alert-checkbox-group::-webkit-scrollbar-track {
-// -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-// }
-
-// .alert-radio-group::-webkit-scrollbar-thumb,
-// .alert-checkbox-group::-webkit-scrollbar-thumb {
-// background-color: darkgrey;
-// outline: 1px solid slategrey;
-// }
