--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -68,7 +68,7 @@
     </ion-row>
     <ion-row>
       <ion-col size="4"></ion-col>
-      <ion-col size="4">
+      <ion-col size="4" class="text-center">
         <span>
           <ion-button fill="outline" class="button-logout text-semibold ion-text-capitalize" (click)="signOut()">Logout
           </ion-button>
